--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -14,12 +16,15 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  align-items: center;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 5px;
   /* this removes the line under the links */
   text-decoration: none;
 }
