--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,36 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
 }
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
 
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.plants {
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+  flex: 0 0 200px;
+}
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
